eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vincpr-ui-deployment
  labels:
    app: vincpr-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vincpr-ui
  template:
    metadata:
      labels:
        app: vincpr-ui
    spec:
      containers:
        - name: vincpr-ui
          image: 845409721587.dkr.ecr.ap-southeast-1.amazonaws.com/vincpr_frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
