eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vincpr-ui-service
spec:
  selector:
    app: vincpr-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
